temp_test/valid/structs/nestedStructs.wacc
# nested structures

# Output:
#

# Program:

begin
  struct Person {int age; char grade;} ;
  struct Record {struct Person p; string shortcode;}
end