temp_test/invalid/structs/incorrectAssignment.wacc
# assign members of incorrect type to a struct

# Output:
#

# Program:

begin
  struct Person {int age; char grade;};
  struct Person alice = {'k', 64}
end